# anyask

./: .gitattributes  .gitignore  index.html  package.json  pnpm-lock.yaml
docs/claude/fix/: 2026-06-13-fix-quick-ask-toolbar.md  2026-06-14-fix-cross-window-settings-sync.md  2026-06-16-fix-quick-ask-spawn-flash.md
docs/claude/plans/: 2026-06-13-plan-quick-ask-toolbar.md  2026-06-14-plan-quick-ask-ai-selector.md
docs/codex/fix/: quick-ask-focus-hotkey-fix.md  selection-toolbar-quick-ask-freeze-fix.md
docs/superpowers/plans/: 2026-06-13-anyask-phase1.md  2026-06-14-ai-provider-crud.md  2026-06-15-quick-ask-focus-reset.md  2026-06-16-selection-toolbar.md  2026-06-23-rdev-selection-toolbar.md  2026-06-24-provider-logos.md  2026-06-29-selection-toolbar-prompt-injection.md
docs/superpowers/specs/: 2026-06-13-anyask-phase1-design.md  2026-06-14-ai-provider-crud-design.md  2026-06-15-quick-ask-focus-reset-design.md  2026-06-16-selection-toolbar-design.md  2026-06-22-rdev-selection-toolbar-design.md  2026-06-24-provider-logos-design.md  2026-06-29-selection-toolbar-prompt-injection-design.md
src/: App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  quick-ask.json  selection-toolbar.json
src-tauri/src/: commands.rs  lib.rs  main.rs  mouse_hook.rs  provider_utils.rs  quick_ask.rs  selection_capture.rs  selection_toolbar.rs  settings_io.rs  shortcuts.rs  state.rs  tray.rs  webviews.rs
src/components/: Card.module.css  Card.tsx  ContentArea.module.css  ContentArea.tsx  ProviderCard.module.css  ProviderCard.test.tsx  ProviderCard.tsx  ProviderLogo.module.css  ProviderLogo.test.tsx  ProviderLogo.tsx  SegmentedControl.module.css  SegmentedControl.tsx  SelectField.module.css  SelectField.tsx  SettingRow.module.css  SettingRow.tsx  SettingsLayout.module.css  SettingsLayout.tsx  Sidebar.module.css  Sidebar.test.tsx  Sidebar.tsx  Toggle.module.css  Toggle.test.tsx  Toggle.tsx
src/i18n/: index.test.tsx  index.tsx  zh-CN.ts
src/lib/: commands.ts  hotkeys.test.ts  hotkeys.ts  logo.test.ts  logo.ts  providerValidation.test.ts  providerValidation.ts  theme.test.ts  theme.ts
src/pages/quick-ask/: QuickAskBar.module.css  QuickAskBar.test.tsx  QuickAskBar.tsx  QuickAskShell.tsx
src/pages/selection-toolbar/: SelectionToolbar.module.css  SelectionToolbar.test.tsx  SelectionToolbar.tsx  SelectionToolbarShell.tsx
src/pages/settings/: AiConfigSettings.module.css  AiConfigSettings.test.tsx  AiConfigSettings.tsx  BasicSettings.module.css  BasicSettings.test.tsx  BasicSettings.tsx  HotkeySettings.module.css  HotkeySettings.test.tsx  HotkeySettings.tsx  ProviderEditPanel.tsx  (+4 more)
src/state/: SettingsContext.test.tsx  SettingsContext.tsx  defaults.test.ts  defaults.ts  selectionActions.test.ts  selectionActions.ts  settingsStore.ts  types.ts
src/styles/: global.css
src/test/: setup.ts
