[package]
name = "anyask"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "anyask_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "tray-icon", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tokio = { version = "1", features = ["time"] }
# 前置锁定 time < 0.3.48：0.3.48 经 cookie 0.18.1 触发 Tauri 依赖树 trait coherence 冲突。
# 这是首次会触发 Rust 构建的任务，提前加避免后续 cargo check/tauri dev 中途爆（MVP 已踩坑）。
time = "=0.3.47"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
get-selected-text = "0.1.6"
rdev = "0.5.3"
tauri-plugin-clipboard-manager = "2"

# 划词无障碍取词:按平台读「焦点元素当前选区」,零副作用(不合成 Ctrl+C)。
# get-selected-text 保留,仅作快捷键路径读不到时的剪贴板兜底。
[target.'cfg(windows)'.dependencies]
# UI Automation 高层封装(Apache-2.0):焦点元素 → TextPattern → get_selection。
uiautomation = "0.25"

[target.'cfg(target_os = "macos")'.dependencies]
# AX API 原始 FFI(MIT/Apache) + CoreFoundation 内存/字符串封装。
accessibility-sys = "0.1"
core-foundation = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
# 读 X11 PRIMARY selection(选中即入、读取被动、零副作用)。
arboard = "3"

